examples/hello-workload/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/instance: hello
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: kubernetes-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
    app.kubernetes.io/instance: hello
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
